# ublox_i2c_core

./: CMakeLists.txt  package.xml
include/ublox_i2c_core/: ublox_i2c_handler.hpp
launch/: dual_gps_launch.py  ntrip_launch.py
src/: base_node.cpp  i2c_manager_node.cpp  ntrip_node.cpp  rover_node.cpp  ublox_i2c_handler.cpp
