<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_i2c_core</name>
  <version>0.0.1</version>
  <description>Native I2C GNSS Driver Suite for Base, Rover, and NTRIP</description>
  <maintainer email="bullwork@ubuntu.com">bullwork</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rtcm_msgs</depend>
  <depend>ublox_ubx_msgs</depend> <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    
  <exec_depend>ntrip_client_node</exec_depend>
  <exec_depend>ublox_dgnss</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>